--- a/README.adoc
+++ b/README.adoc
@@ -64,16 +64,13 @@ Steps:
 
 [source,go]
 ----
-variable "aws-account-id" {
-  default = "my-aws-account-id"
-}
-
 module "dynamic-secgroup" {
   source = "riboseinc/authenticating-secgroup/aws"
-  aws-account-id = "${var.aws-account-id}"
+  aws_account_id          = "${var.aws_account_id}"
+  aws_region              = "us-west-2"
 
   # Description of this secgroup
-  description = "Developer SSH Access"
+  description             = "${var.description}"
 
   # Where to add the rules to
   security-groups = [
@@ -82,67 +79,61 @@ module "dynamic-secgroup" {
   ]
 
   # Parameters for creating security group rules
-  # secgroup-rule-type      = "ingress" we dont need type
-  secgroup-rule-from_port = 22
-  secgroup-rule-to_port   = 22
-  secgroup-rule-protocol  = "-1"
+  secgroup_rule_type      = "ingress"
+  secgroup_rule_from_port = 22
+  secgroup_rule_to_port   = 22
+  secgroup_rule_protocol  = "tcp"
 
   # Time to expiry for every rule.
   # Default: 600 seconds.
-  time_to_expire = "600"
+  time_to_expire          = 600
 }
 
-# A group we want to provide SSH access to
-resource "aws_iam_group" "developers" {
-  name = "developers"
-}
 
-# Who can access this API (i.e., who can be added to the dynamic secgroup)
-resource "aws_iam_group_policy_attachment" "developers-access-ssh" {
-  group      = "${aws_iam_group.developers.name}"
-  policy_arn = "${module.dynamic-secgroup.api-gateway-access-policy-arn}"
-}
+# Sample "terraform.tfvars"
+
+aws_account_id = "aws_account_id"
+aws_access_key = "aws_access_key"
+aws_secret_key = "aws_secret_key"
+aws_region = "aws_region"
+description  = "Developer SSH Access"
 
 
 # Some outputs
 
-output "dynamic-secgroup-api-gateway-arn" {
-  value = "${module.dynamic-secgroup.api-gateway-arn}"
+output "dynamic-secgroup-api-invoke-urls" {
+  value = "${module.dynamic-secgroup.invoke_urls}"
 }
 
-output "dynamic-secgroup-api-gateway-access-policy-arn" {
-  value = "${module.dynamic-secgroup.api-gateway-access-policy-arn}"
+output "dynamic-secgroup-api-execution-resources" {
+  value = "${module.dynamic-secgroup.execution_resources}"
 }
 ----
 
 
-The `module.dynamic-secgroup.api-gateway-access-policy-arn` is something like:
+The `module.access-policy` is something like:
 
 [source,go]
 ----
-resource "aws_iam_policy" "secgroup-access-policy" {
-  name        = "secgroup-access-policy"
+resource "aws_iam_policy" "access_policy" {
+  name = "secgroup-access-policy"
   description = "Policy: ${var.description}"
-  policy      = "${data.aws_iam_policy_document.secgroup-access-policy-doc.json"
+  policy      = "${data.aws_iam_policy_document.access_policy_doc.json}"
 }
 
-data "aws_iam_policy_document" "secgroup-access-policy-doc" {
-  policy_id = "ssh-access-policy"
-
+data "aws_iam_policy_document" "access_policy_doc" {
   statement {
-    sid = "AccessSecurityGroup"
-    effect = "Allow"
-    actions = [
+    effect    = "Allow"
+    actions   = [
       "execute-api:Invoke"
     ]
-    resource: [
-      "arn:aws:execute-api:${var.aws-region}:${var.aws-account-id}:${aws_api_gateway_rest_api.api.name}/*/DELETE/connection",
-      "arn:aws:execute-api:${var.aws-region}:${var.aws-account-id}:${aws_api_gateway_rest_api.api.name}/*/POST/connection"
+    resources = [
+      "${var.execution_resources}"
     ]
   }
 }
 
-output "api-gateway-access-policy-arn" {
-  value = "aws_iam_policy.secgroup-access-policy.arn"
+output "access-policy-arn" {
+  value = "${aws_iam_policy.access_policy.arn}"
 }
 ----
