--- a/README.adoc
+++ b/README.adoc
@@ -137,3 +137,5 @@ output "access-policy-arn" {
   value = "${aws_iam_policy.access_policy.arn}"
 }
 ----
+
+Check out https://https://github.com/riboseinc/terraform-aws-authenticating-secgroup/tree/master/examples/getting-started[examples] for more example usage
