--- a/README.adoc
+++ b/README.adoc
@@ -62,6 +62,8 @@ Steps:
 
 == Sample Usage
 
+Check out https://github.com/riboseinc/terraform-aws-authenticating-secgroup/tree/master/examples[examples] for more details
+
 [source,go]
 ----
 module "dynamic-secgroup" {
@@ -141,5 +143,3 @@ output "access-policy-arn" {
   value = "${aws_iam_policy.access_policy.arn}"
 }
 ----
-
-Check out https://https://github.com/riboseinc/terraform-aws-authenticating-secgroup/tree/master/examples/getting-started[examples] for more example usage
